--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.5'
     implementation 'org.codehaus.jackson:jackson-core-asl:1.9.13'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+    // JWT
+    implementation 'com.auth0:java-jwt:3.18.3'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 tasks.named('test') {
